Pulled Step DLL into StepConsole.

--- a/StoryAssemblerRedux/StepConsole/StepConsole/StepConsole.csproj
+++ b/StoryAssemblerRedux/StepConsole/StepConsole/StepConsole.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <Reference Include="Step">
-      <HintPath>..\..\Step\Step\bin\Debug\Step.dll</HintPath>
+      <HintPath>Resources\Step.dll</HintPath>
     </Reference>
   </ItemGroup>
 
